# parami-learning-centre-maesot-exam-website

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/askama_templates/: mod.rs
src/config/: mod.rs
src/db/: connection.rs
src/models/: mod.rs  record.rs  student.rs
src/routes/: exam.rs  mod.rs
templates/: base.html  exam-b.html  exam.html  index.html  navbar.html  products.html  side-nav.html
templates/_partials/: product.item.card.html  product.list.html  product.new.form.html  product.search.list.html
