[package]
name = "parami_centre_exam_system_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
surrealdb = "1.5.4"
anyhow = "1.0.86"
log = "0.4.22"
pretty_env_logger = "0.5.0"
teloxide = "0.12.2"
url = "2.5.2"
axum-extra = { version = "0.9.3", features = ["typed-header", "form", "query", "multipart"] }
once_cell = "1.19.0"
base64 = "0.22.1"
rayon = "1.10.0"
ulid = { version = "1.1.3", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive", "env"] }
askama = { version = "0.12.1", features = ["serde", "serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
bytesize = "1.3.0"
